--- a/assets/css/_reset.sass
+++ b/assets/css/_reset.sass
@@ -71,7 +71,7 @@ input[type='submit']
 a
   color: #000
 a, input, button, a img, textarea
-  transition: color 0.5s, background 0.5s, opacity 0.5s, border 0.5s
+  transition: all .3s ease
   outline: none
   &:hover, &:focus
     outline: none
@@ -79,6 +79,8 @@ img
   width: auto
   height: auto
   max-width: 100%
+svg
+  transition: all .3s ease
 .wrapper
   margin: 0 auto
   min-height: 100%  
