--- a/assets/css/_flexboxgrid.sass
+++ b/assets/css/_flexboxgrid.sass
@@ -1,21 +1,21 @@
 @import "_flex"
 
 $grid-columns: 12 !default
-$gutter-width: 1rem !default
-$outer-margin: 2rem !default
+$gutter-width: 10px !default
+$outer-margin: 10px !default
 $xl: 1600px
 $lg-top: 1599px
 $lg: 1200px
 $md-top: 1199px
 $md: 768px
 $xs: 767px
-$breakpoints: xs $xs 480px, md $md 740px, lg $lg 1199px, lg $xl 1590px !default
+$breakpoints: xs $xs 480px, md $md 740px, lg $lg 1199px, xl $xl 1590px !default
 $flexboxgrid-max-width: 1590px !default
 $gutter-compensation: $gutter-width * .5 * -1
 $half-gutter-width: $gutter-width * .5
 
 @mixin xl
-  @media (min-width: #{$lg})
+  @media (min-width: #{$xl})
     @content
 @mixin lg
   @media (min-width: #{$lg}) and (max-width: #{$lg-top})
@@ -29,14 +29,9 @@ $half-gutter-width: $gutter-width * .5
 
 .container
   box-sizing: border-box
-  max-width: $flexboxgrid-max-width
   margin: 0 auto
-  @media (min-width: 544px)
-    padding-right: $half-gutter-width
-    padding-left: $half-gutter-width
-  @media (max-width: 543px)
-    padding-right: $half-gutter-width * 1.5
-    padding-left: $half-gutter-width * 1.5
+  padding-right: $gutter-width
+  padding-left: $gutter-width
 .container-fluid
   margin-right: auto
   margin-left: auto
@@ -48,8 +43,8 @@ $half-gutter-width: $gutter-width * .5
   @include flex(0, 1, auto)
   @include flex-direction(row)
   @include flex-wrap(wrap)
-  margin-right: $gutter-compensation
-  margin-left: $gutter-compensation
+  margin-right: -$gutter-width
+  margin-left: -$gutter-width
 .row.reverse
   @include flex-direction(row-reverse)
 .col.reverse
@@ -59,8 +54,8 @@ $half-gutter-width: $gutter-width * .5
   box-sizing: border-box
   @include flex-grow(0)
   @include flex-shrink(0)
-  padding-right: $half-gutter-width
-  padding-left: $half-gutter-width
+  padding-right: $gutter-width
+  padding-left: $gutter-width
 
 $name: xs
 
