--- a/assets/css/_keyframes.sass
+++ b/assets/css/_keyframes.sass
@@ -1,21 +1,14 @@
-@keyframes shake
+@keyframes showSearch
   0%
-    transform: translateX(-10px)
-  20%
-    transform: translateX(10px)
-  30%
-    transform: translateX(-7px)
-  40%
-    transform: translateX(7px)
-  50%
-    transform: translateX(-5px)
-  60%
-    transform: translateX(5px)
-  70%
-    transform: translateX(-3px)
-  80%
-    transform: translateX(3px)
-  90%
-    transform: translateX(-1px)
-  95%
-    transform: translateX(1px)
+    transform: translateY(-10px)
+    opacity: 0
+  100%
+    transform: translateY(0)
+    opacity: 1
+@keyframes showProductPreviewBtn
+  0%
+    transform: translateY(-10px)
+    opacity: 0
+  100%
+    transform: translateY(0)
+    opacity: 1
